Colorpicker: changed default colors

--- a/_includes/blocks/colorSelector-children.html
+++ b/_includes/blocks/colorSelector-children.html
@@ -4,84 +4,84 @@
       <ul class="itemBoxTable__bodyRow">
         <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
-            <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: black;" data-color="black">ग़</i>
+            <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #dcdcdc;" data-color="#dcdcdc">ग़</i>
           </div>
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
           <div class="itemBoxTable__bodyCellInner">
-            black
+            Silver
           </div>
         </li>
       </ul>
       <ul class="itemBoxTable__bodyRow">
         <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
-            <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: green;" data-color="green">ग़</i>
+            <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #00bfff;" data-color="#00bfff">ग़</i>
           </div>
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
           <div class="itemBoxTable__bodyCellInner">
-            green
+            Deep Blue Sky
           </div>
         </li>
       </ul>
       <ul class="itemBoxTable__bodyRow">
         <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
-            <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: red;" data-color="red">ग़</i>
+            <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #0bda51;" data-color="#0bda51">ग़</i>
           </div>
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
           <div class="itemBoxTable__bodyCellInner">
-            red
+            Malachite
           </div>
         </li>
       </ul>
       <ul class="itemBoxTable__bodyRow">
         <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
-            <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: blue;" data-color="blue">ग़</i>
+            <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #f4ca16;" data-color="#f4ca16">ग़</i>
           </div>
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
           <div class="itemBoxTable__bodyCellInner">
-            blue
+            Saffron
           </div>
         </li>
       </ul>
       <ul class="itemBoxTable__bodyRow">
         <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
-            <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: yellow;" data-color="yellow">ग़</i>
+            <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #b8860b;" data-color="#b8860b">ग़</i>
           </div>
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
           <div class="itemBoxTable__bodyCellInner">
-            yellow
+            Dark Goldenrod
           </div>
         </li>
       </ul>
       <ul class="itemBoxTable__bodyRow">
         <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
-            <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: orange;" data-color="orange">ग़</i>
+            <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #e30022;" data-color="#e30022">ग़</i>
           </div>
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
           <div class="itemBoxTable__bodyCellInner">
-            orange
+            Cadmium Red
           </div>
         </li>
       </ul>
       <ul class="itemBoxTable__bodyRow">
         <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
-            <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: hotpink;" data-color="hotpink">ग़</i>
+            <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #343434;" data-color="#343434">ग़</i>
           </div>
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
           <div class="itemBoxTable__bodyCellInner">
-            pink
+            Jet
           </div>
         </li>
       </ul>
