--- a/_includes/popups/multiSelector1.html
+++ b/_includes/popups/multiSelector1.html
@@ -3,7 +3,7 @@
   <div class="multiSelector__box">
 
     <div class="multiSelector__search">
-      <input type="search" class="multiSelector__searchInput js_multiSelector__filterInput" placeholder="filter through statuses">
+      <input type="search" class="multiSelector__searchInput js_multiSelector__filterInput" placeholder="filter through items">
     </div>
 
   </div>
