--- a/sass/components/selector.scss
+++ b/sass/components/selector.scss
@@ -110,8 +110,6 @@
       position: relative;
       display: inline-block;
       padding: 0 3px;
-      width: 100%;
-      text-align: center;
 
       &:first-child {
         padding-left: 0;
@@ -130,7 +128,9 @@
       }
 
       &--field {
-
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
       }
     }
 
