tagPicker is now an actual popup

--- a/_includes/popups/colorPicker-children.html
+++ b/_includes/popups/colorPicker-children.html
@@ -1,4 +1,4 @@
-<div class="multiSelector multiSelector--popup multiSelector--visible" >
+<div class="multiSelector multiSelector--popup" id="multiSelector-tagpicker">
   <div class="multiSelector__box">
     <div class="multiSelector__search">
       <input type="search" class="multiSelector__searchInput js_multiSelector__filterInput" placeholder="filter through tags">
