--- a/sass/components/multiSelector.scss
+++ b/sass/components/multiSelector.scss
@@ -180,7 +180,8 @@
 
 #multiSelector-1,
 #multiSelector-2,
-#multiSelector-3 {
+#multiSelector-3,
+#multiSelector-tagpicker {
   position: absolute;
   top: 50px;
   right: 0;
