Tabs: added real example data for smartlist tab

--- a/_includes/blocks/app-nav-tab2.html
+++ b/_includes/blocks/app-nav-tab2.html
@@ -28,8 +28,88 @@
                   <div class="pmx-selector pmx-selector--readonly">
                     <div class="pmx-selector__item pmx-selector__item--selected">
                       <div class="pmx-selector__block">
-                        <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Workspace</span>
-                        <span class="pmx-selector__blockPart pmx-selector__blockPart--field">My private smartlists</span>
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Product Development</span>
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--field">BI Bugs Stats</span>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+              </li>
+            </ul>
+            <ul class="itemBoxTable__bodyRow">
+              <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
+                <div class="itemBoxTable__bodyCellInner">
+
+                  <div class="pmx-selector pmx-selector--readonly">
+                    <div class="pmx-selector__item pmx-selector__item--selected">
+                      <div class="pmx-selector__block">
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Product Development</span>
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--field">BI product sprints</span>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+              </li>
+            </ul>
+            <ul class="itemBoxTable__bodyRow">
+              <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
+                <div class="itemBoxTable__bodyCellInner">
+
+                  <div class="pmx-selector pmx-selector--readonly">
+                    <div class="pmx-selector__item pmx-selector__item--selected">
+                      <div class="pmx-selector__block">
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Product Development</span>
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--field">BI strategic goals</span>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+              </li>
+            </ul>
+            <ul class="itemBoxTable__bodyRow">
+              <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
+                <div class="itemBoxTable__bodyCellInner">
+
+                  <div class="pmx-selector pmx-selector--readonly">
+                    <div class="pmx-selector__item pmx-selector__item--selected">
+                      <div class="pmx-selector__block">
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Product Development</span>
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--field">bugs created last month</span>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+              </li>
+            </ul>
+            <ul class="itemBoxTable__bodyRow">
+              <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
+                <div class="itemBoxTable__bodyCellInner">
+
+                  <div class="pmx-selector pmx-selector--readonly">
+                    <div class="pmx-selector__item pmx-selector__item--selected">
+                      <div class="pmx-selector__block">
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Product Development</span>
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Closed Last month with rootcause</span>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+              </li>
+            </ul>
+            <ul class="itemBoxTable__bodyRow">
+              <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
+                <div class="itemBoxTable__bodyCellInner">
+
+                  <div class="pmx-selector pmx-selector--readonly">
+                    <div class="pmx-selector__item pmx-selector__item--selected">
+                      <div class="pmx-selector__block">
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Product Development</span>
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Milestone Spaghetti by WorkType</span>
                       </div>
                     </div>
                   </div>
@@ -60,8 +140,72 @@
                   <div class="pmx-selector pmx-selector--readonly">
                     <div class="pmx-selector__item pmx-selector__item--selected">
                       <div class="pmx-selector__block">
-                        <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Workspace</span>
-                        <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Financial_milestones PMX (smartlist)</span>
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Product Development</span>
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--field">DEVCENTER_Cooking</span>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+              </li>
+            </ul>
+            <ul class="itemBoxTable__bodyRow">
+              <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
+                <div class="itemBoxTable__bodyCellInner">
+
+                  <div class="pmx-selector pmx-selector--readonly">
+                    <div class="pmx-selector__item pmx-selector__item--selected">
+                      <div class="pmx-selector__block">
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Product Development</span>
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--field">DEVCENTER_Served</span>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+              </li>
+            </ul>
+            <ul class="itemBoxTable__bodyRow">
+              <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
+                <div class="itemBoxTable__bodyCellInner">
+
+                  <div class="pmx-selector pmx-selector--readonly">
+                    <div class="pmx-selector__item pmx-selector__item--selected">
+                      <div class="pmx-selector__block">
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--label">pmX Projects and Support</span>
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--field">All remaining projects &amp; SRs (MSProject)</span>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+              </li>
+            </ul>
+            <ul class="itemBoxTable__bodyRow">
+              <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
+                <div class="itemBoxTable__bodyCellInner">
+
+                  <div class="pmx-selector pmx-selector--readonly">
+                    <div class="pmx-selector__item pmx-selector__item--selected">
+                      <div class="pmx-selector__block">
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--label">pmX Projects and Support</span>
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Budget Overrun Projects And Services</span>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+              </li>
+            </ul>
+            <ul class="itemBoxTable__bodyRow">
+              <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
+                <div class="itemBoxTable__bodyCellInner">
+
+                  <div class="pmx-selector pmx-selector--readonly">
+                    <div class="pmx-selector__item pmx-selector__item--selected">
+                      <div class="pmx-selector__block">
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Product Development</span>
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Backlog Health</span>
                       </div>
                     </div>
                   </div>
@@ -92,8 +236,8 @@
                   <div class="pmx-selector pmx-selector--readonly">
                     <div class="pmx-selector__item pmx-selector__item--selected">
                       <div class="pmx-selector__block">
-                        <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Workspace</span>
-                        <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Milestone Born - MAINT - Year 3</span>
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Operations</span>
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--field">IT Requests</span>
                       </div>
                     </div>
                   </div>
@@ -108,8 +252,72 @@
                   <div class="pmx-selector pmx-selector--readonly">
                     <div class="pmx-selector__item pmx-selector__item--selected">
                       <div class="pmx-selector__block">
-                        <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Workspace</span>
-                        <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Milestone Gerkesklooster - LIC - Year 2</span>
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Operations</span>
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--field">IT Tasks</span>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+              </li>
+            </ul>
+            <ul class="itemBoxTable__bodyRow">
+              <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
+                <div class="itemBoxTable__bodyCellInner">
+
+                  <div class="pmx-selector pmx-selector--readonly">
+                    <div class="pmx-selector__item pmx-selector__item--selected">
+                      <div class="pmx-selector__block">
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Operations</span>
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Open IT Tickets (Sys-admin)</span>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+              </li>
+            </ul>
+            <ul class="itemBoxTable__bodyRow">
+              <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
+                <div class="itemBoxTable__bodyCellInner">
+
+                  <div class="pmx-selector pmx-selector--readonly">
+                    <div class="pmx-selector__item pmx-selector__item--selected">
+                      <div class="pmx-selector__block">
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Prof. Serv.</span>
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Financial Milestones</span>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+              </li>
+            </ul>
+            <ul class="itemBoxTable__bodyRow">
+              <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
+                <div class="itemBoxTable__bodyCellInner">
+
+                  <div class="pmx-selector pmx-selector--readonly">
+                    <div class="pmx-selector__item pmx-selector__item--selected">
+                      <div class="pmx-selector__block">
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Prof. Serv.</span>
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--field">OOO Requests</span>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+              </li>
+            </ul>
+            <ul class="itemBoxTable__bodyRow">
+              <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
+                <div class="itemBoxTable__bodyCellInner">
+
+                  <div class="pmx-selector pmx-selector--readonly">
+                    <div class="pmx-selector__item pmx-selector__item--selected">
+                      <div class="pmx-selector__block">
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Prof. Serv.</span>
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Work Orders</span>
                       </div>
                     </div>
                   </div>
