Pmx: new-multiselect now uses Id new-multiselect

--- a/sass/components/multiSelector.scss
+++ b/sass/components/multiSelector.scss
@@ -181,6 +181,7 @@
 #multiSelector-1,
 #multiSelector-2,
 #multiSelector-3,
+#new-multiselect,
 #multiSelector-tagpicker {
   position: absolute;
   top: 50px;
