Refactor: multiSelector2 -> multiselector-columnpicker

--- a/_includes/blocks/itembox.html
+++ b/_includes/blocks/itembox.html
@@ -21,7 +21,7 @@
             <i class="itemBoxTable__action" title="link">ރ</i>
           </div>
         </li>
-        <li class="itemBoxHeader__cell MULTISELECT__POPUP" data-popid="#multiSelector-2" style="flex-grow: 0;" data-flex="0">
+        <li class="itemBoxHeader__cell MULTISELECT__POPUP" data-popid="#multiSelector-columnpicker" style="flex-grow: 0;" data-flex="0">
           <div class="itemBoxHeader__cellInner">
             <i class="itemBoxTable__action" title="arrange columns">ށ</i>
           </div>
@@ -121,7 +121,7 @@
                   <i class="itemBoxTable__action">ރ</i>
                 </div>
               </li>
-              <li class="itemBoxHeader__cell MULTISELECT__POPUP" data-popid="#multiSelector-2" style="flex-grow: 0;" data-flex="0">
+              <li class="itemBoxHeader__cell MULTISELECT__POPUP" data-popid="#multiSelector-columnpicker" style="flex-grow: 0;" data-flex="0">
                 <div class="itemBoxHeader__cellInner">
                   <i class="itemBoxTable__action">ށ</i>
                 </div>
