--- a/sass/components/multiSelector.scss
+++ b/sass/components/multiSelector.scss
@@ -179,7 +179,7 @@
 
 
 #multiSelector-1,
-#multiSelector-2,
+#multiSelector-columnpicker,
 #multiSelector-3,
 #new-multiselect,
 #multiSelector-tagpicker {
