--- a/_includes/blocks/old-pmx-table.html
+++ b/_includes/blocks/old-pmx-table.html
@@ -15,7 +15,7 @@
                       <li id="anonymous_element_75" class="column column0 level0 variable  sorting colname_col_sf2 titlefilter" style="width: 32%;"><span id="anonymous_element_76" class="sortable noexpandall" title="Title">Title</span></li>
                       <li id="anonymous_element_81" class="column column3 level0 medium  sorting colname_col_sf15" style="width: 32%;"><span id="anonymous_element_82" class="sortable" title="Performed For">Performed For</span></li>
                       <li id="anonymous_element_91" class="column column8 level0 medium  sorting colname_col_sf4" style="width: 32%;"><span id="anonymous_element_92" class="sortable" title="Assigned to">Assigned to</span></li>
-                      <li class="column column13 level0 actionCol1 action action" style="width: 2%;"><a class="columns " title="Customize columns">&nbsp;</a></li>
+                      <li class="column column13 level0 actionCol1 action action" style="width: 2%;"><a class="columns js_new-multiselect-trigger" data-multiselect="#multiSelector-columnpicker" title="Customize columns">&nbsp;</a></li>
                       <li class="column column14 level0 actionCol2 action action" style="width: 2%;"><a class="toggle" id="listtools_filter" title="Toggle filter">&nbsp;</a></li>
                     </ul>
                   </li>
@@ -32,7 +32,7 @@
                               <span id="anonymous_element_127">
                                 <div id="picker" class="solidinput haspicker" title="" style="width: 95%;">
                                   <div class="newpicker bottom" id="anonymous_element_128">
-                                    <span class="newpickerbutton showFunnel js_new-multiselect-trigger">&nbsp;</span>
+                                    <span class="newpickerbutton showFunnel js_new-multiselect-trigger" data-multiselect="#new-multiselect">&nbsp;</span>
                                   </div>
                                   <div class="pickerinput">
                                     <span class="noinput invisible pickerfocusable" tabindex="0">&nbsp;</span>
