Columnpicker: added default selection for pmx page

--- a/_includes/popups/multiSelector-columnpicker.html
+++ b/_includes/popups/multiSelector-columnpicker.html
@@ -36,6 +36,38 @@
               <div class="itemBoxBody itemBoxBody--sortable">
                 <ul class="itemBoxTable__bodyRow js_filterableCell">
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
+                    <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">Title
+                    </div>
+                  </li>
+                  <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--draggable" style="flex-grow: 0;" data-flex="0">
+                    <div class="itemBoxTable__bodyCellInner">
+                      <i class="itemBoxTable__action itemBoxTable__action--drag">އ</i>
+                    </div>
+                  </li>
+                  <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
+                    <div class="itemBoxTable__bodyCellInner">
+                      <i class="itemBoxTable__action itemBoxTable__action--remove">ޅ</i>
+                    </div>
+                  </li>
+                </ul>
+                <ul class="itemBoxTable__bodyRow js_filterableCell">
+                  <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
+                    <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">Performed For
+                    </div>
+                  </li>
+                  <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--draggable" style="flex-grow: 0;" data-flex="0">
+                    <div class="itemBoxTable__bodyCellInner">
+                      <i class="itemBoxTable__action itemBoxTable__action--drag">އ</i>
+                    </div>
+                  </li>
+                  <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
+                    <div class="itemBoxTable__bodyCellInner">
+                      <i class="itemBoxTable__action itemBoxTable__action--remove">ޅ</i>
+                    </div>
+                  </li>
+                </ul>
+                <ul class="itemBoxTable__bodyRow js_filterableCell">
+                  <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                     <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">Assigned to
                     </div>
                   </li>
@@ -227,9 +259,9 @@
                         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">Title</div>
                         </li>
-                        <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add" style="flex-grow: 0;" data-flex="0">
+                        <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
                           <div class="itemBoxTable__bodyCellInner">
-                            <i class="itemBoxTable__action itemBoxTable__action--add">ބ</i>
+                            <i class="itemBoxTable__action itemBoxTable__action--remove">ޅ</i>
                           </div>
                         </li>
                       </ul>
@@ -246,6 +278,11 @@
                   </li>
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                     <div class="itemBoxTable__bodyCellInner">Who is involved</div>
+                  </li>
+                  <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove js_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
+                    <div class="itemBoxTable__bodyCellInner">
+                      <i class="itemBoxTable__action js_itemBoxTable__action--removeAll itemBoxTable__action--remove">ޅ</i>
+                    </div>
                   </li>
                   <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add js_itemBoxTable__bodyCell--addAll" style="flex-grow: 0;" data-flex="0">
                     <div class="itemBoxTable__bodyCellInner">
@@ -300,9 +337,9 @@
                         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">Performed for</div>
                         </li>
-                        <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add" style="flex-grow: 0;" data-flex="0">
+                        <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
                           <div class="itemBoxTable__bodyCellInner">
-                            <i class="itemBoxTable__action itemBoxTable__action--add">ބ</i>
+                            <i class="itemBoxTable__action itemBoxTable__action--remove">ޅ</i>
                           </div>
                         </li>
                       </ul>
