--- a/sass/components/multiSelector.scss
+++ b/sass/components/multiSelector.scss
@@ -37,7 +37,7 @@
     .itemBox {
       color: #000;
 
-      &--tagPicker {
+      &--tagPicker, &--suggestions {
         padding: 10px 0 10px 10px;
         background-color: #B2B2B2;
       }
