show suggestion block on typing

--- a/_includes/popups/colorPicker-children.html
+++ b/_includes/popups/colorPicker-children.html
@@ -3,7 +3,7 @@
     <div class="multiSelector__search">
       <input type="search" class="multiSelector__searchInput js_multiSelector__filterInput" placeholder="filter through tags">
     </div>
-    <div class="itemBox itemBox--children itemBox--suggestions">
+    <div class="itemBox itemBox--children itemBox--suggestions js_itemBox--suggestions" style="display: none;">
       <div class="itemBoxTable">
         <div class="itemBoxBody">
           <ul class="itemBoxTable__bodyRow">
