--- a/_includes/popups/colorPicker-children.html
+++ b/_includes/popups/colorPicker-children.html
@@ -7,15 +7,41 @@
       <div class="itemBoxTable">
         <div class="itemBoxBody">
           <ul class="itemBoxTable__bodyRow">
+            <li class="itemBoxTable__bodyCell js_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
+              <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--colortoggle">
+                <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #0bda51;" data-color="#0bda51">ग़</i>
+              </div>
+            </li>
             <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-              <div class="itemBoxTable__bodyCellInner">Suggestion 1</div>
+              <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">
+                Suggestion 1
+              </div>
+            </li>
+            <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
+              <div class="itemBoxTable__bodyCellInner">
+                <i class="itemBoxTable__action itemBoxTable__action--remove">ޅ</i>
+              </div>
             </li>
           </ul>
+          {% include blocks/colorSelector-children.html %}
           <ul class="itemBoxTable__bodyRow">
+            <li class="itemBoxTable__bodyCell js_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
+              <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--colortoggle">
+                <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #00bfff;" data-color="#00bfff">ग़</i>
+              </div>
+            </li>
             <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-              <div class="itemBoxTable__bodyCellInner">Suggestion 2</div>
+              <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">
+                Suggestion 2
+              </div>
+            </li>
+            <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add" style="flex-grow: 0;" data-flex="0">
+              <div class="itemBoxTable__bodyCellInner">
+                <i class="itemBoxTable__action itemBoxTable__action--add">ބ</i>
+              </div>
             </li>
           </ul>
+          {% include blocks/colorSelector-children.html %}
           <ul class="itemBoxTable__bodyRow itemBoxTable__bodyRow--loadMore js_createNewTag">
             <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
               <div class="itemBoxTable__bodyCellInner">Create New Tag</div>
@@ -55,12 +81,12 @@
                 <ul class="itemBoxTable__bodyRow js_filterableCell">
                   <li class="itemBoxTable__bodyCell js_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
                     <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--colortoggle">
-                      <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #0bda51;" data-color="green">ग़</i>
+                      <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #0bda51;" data-color="#0bda51">ग़</i>
                     </div>
                   </li>
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                     <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">
-                      xamarin
+                      xamarin tablet
                     </div>
                   </li>
                   <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--draggable ui-sortable-handle" style="flex-grow: 0;" data-flex="0">
@@ -114,7 +140,7 @@
                   </li>
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                     <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">
-                      xamarin
+                      xamarin table
                     </div>
                   </li>
                   <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
@@ -129,12 +155,12 @@
                 <ul class="itemBoxTable__bodyRow js_filterableCell">
                     <li class="itemBoxTable__bodyCell js_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
                       <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--colortoggle">
-                        <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #00bfff;" data-color="blue">ग़</i>
+                        <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #00bfff;" data-color="#00bfff">ग़</i>
                       </div>
                     </li>
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                     <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">
-                      waitingIT
+                      xamarin mobile
                     </div>
                   </li>
                   <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add" style="flex-grow: 0;" data-flex="0">
@@ -147,7 +173,7 @@
                 <ul class="itemBoxTable__bodyRow js_filterableCell">
                     <li class="itemBoxTable__bodyCell js_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
                       <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--colortoggle">
-                        <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #f4ca16;" data-color="orange">ग़</i>
+                        <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #f4ca16;" data-color="#f4ca16">ग़</i>
                       </div>
                     </li>
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -165,7 +191,7 @@
                 <ul class="itemBoxTable__bodyRow js_filterableCell">
                     <li class="itemBoxTable__bodyCell js_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
                       <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--colortoggle">
-                        <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #e30022;" data-color="red">ग़</i>
+                        <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #e30022;" data-color="#e30022">ग़</i>
                       </div>
                     </li>
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
