enable filter for pmx page

--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -57,6 +57,8 @@
 
   <!-- OLD COMPONENTS -->
   <script type="text/javascript" src="{{ site.baseurl }}/scripts/pmx/old-pmx-multiselect.js"></script>
+    <!-- filters -->
+    <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/filter.js"></script>
 {% endif %}
 
 {% if page.title == 'Itembox' %}
