Bugfix: when to add/remove active cell classes

--- a/_includes/blocks/colorPicker-suggestions.html
+++ b/_includes/blocks/colorPicker-suggestions.html
@@ -9,7 +9,7 @@
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">
-            Suggestion 1
+            xamarin_tablet
           </div>
         </li>
         <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
@@ -27,7 +27,7 @@
         </li>
         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">
-            Suggestion 2
+            xamarin_mobile
           </div>
         </li>
         <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add" style="flex-grow: 0;" data-flex="0">
