Fix: if there is no actionItem, return.

--- a/_includes/popups/colorPicker-children.html
+++ b/_includes/popups/colorPicker-children.html
@@ -89,7 +89,7 @@
                 <ul class="itemBoxTable__bodyRow js_filterableCell">
                   <li class="itemBoxTable__bodyCell js_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
                     <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--colortoggle">
-                      <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #0bda51;" data-color="green">ग़</i>
+                      <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: #0bda51;" data-color="#0bda51">ग़</i>
                     </div>
                   </li>
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
