Simplify selection of multiSelector--popup other then ids

--- a/sass/components/multiSelector.scss
+++ b/sass/components/multiSelector.scss
@@ -184,11 +184,7 @@
 }
 
 
-#multiSelector-1,
-#multiSelector-columnpicker,
-#multiSelector-3,
-#new-multiselect,
-#multiSelector-tagpicker {
+.multiSelector--popup {
   position: absolute;
   top: 50px;
   right: 0;
