--- a/_includes/components/selectors/collapsed/teams.html
+++ b/_includes/components/selectors/collapsed/teams.html
@@ -1,23 +1,23 @@
 <div class="pmx-selector pmx-selector--collapsed pmx-selector--multiSelect MULTISELECT__POPUP" data-popid="#multiSelector-3">
   <div class="pmx-selector__item pmx-selector__item--selected">
     <div class="pmx-selector__block ">
-      <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: green;">܌</span>
+      <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #0bda51;">ग़</span>
       <span class="pmx-selector__blockSeperator">•</span>
-      <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Squad X</span>
+      <span class="pmx-selector__blockPart pmx-selector__blockPart--field">dev-team</span>
     </div>
   </div>
   <div class="pmx-selector__item pmx-selector__item--selected">
     <div class="pmx-selector__block ">
-      <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: blue;">܌</span>
+      <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #00bfff;">ग़</span>
       <span class="pmx-selector__blockSeperator">•</span>
-      <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Squad Y</span>
+      <span class="pmx-selector__blockPart pmx-selector__blockPart--field">back-end</span>
     </div>
   </div>
   <div class="pmx-selector__item pmx-selector__item--selected">
     <div class="pmx-selector__block ">
-      <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: orange;">܌</span>
+      <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #f4ca16;">ग़</span>
       <span class="pmx-selector__blockSeperator">•</span>
-      <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Squad Z</span>
+      <span class="pmx-selector__blockPart pmx-selector__blockPart--field">critical</span>
     </div>
   </div>
 </div>
