--- a/_includes/components/selectors/expanded/tags.html
+++ b/_includes/components/selectors/expanded/tags.html
@@ -1,23 +1,23 @@
 <div class="pmx-selector pmx-selector--expanded pmx-selector--multiSelect">
   <div class="pmx-selector__item pmx-selector__item--selected">
     <div class="pmx-selector__block ">
-      <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: green;">܌</span>
+      <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #0bda51;">܌</span>
       <span class="pmx-selector__blockSeperator">•</span>
-      <span class="pmx-selector__blockPart pmx-selector__blockPart--field">dev-team</span>
+      <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Squad X</span>
     </div>
   </div>
   <div class="pmx-selector__item">
     <div class="pmx-selector__block ">
-      <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: green;">܌</span>
+      <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #0bda51;">܌</span>
       <span class="pmx-selector__blockSeperator">•</span>
-      <span class="pmx-selector__blockPart pmx-selector__blockPart--field">back-end</span>
+      <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Squad Y</span>
     </div>
   </div>
   <div class="pmx-selector__item pmx-selector__item--selected">
     <div class="pmx-selector__block ">
-      <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: green;">܌</span>
+      <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #0bda51;">܌</span>
       <span class="pmx-selector__blockSeperator">•</span>
-      <span class="pmx-selector__blockPart pmx-selector__blockPart--field">critical</span>
+      <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Squad Z</span>
     </div>
   </div>
 </div>
