--- a/sass/blocks/app-navigator.scss
+++ b/sass/blocks/app-navigator.scss
@@ -36,6 +36,10 @@
     height: 100%;
     overflow-y: auto;
 
+    &::-webkit-scrollbar {
+      display: none;
+    }
+
     .tabs__panel {
       padding: 10px;
     }
