--- a/sass/components/selector.scss
+++ b/sass/components/selector.scss
@@ -83,7 +83,7 @@
     cursor: pointer;
     transition: all .3s ease-in-out;
     opacity: .5;
-    filter: saturate(0);
+    filter: saturate(0) brightness(0);
 
     &:hover {
       background-color: rgba(255, 255, 255, .7);
@@ -93,7 +93,7 @@
       background-color: #FFF;
       box-shadow: 0 3px 10px rgba(0,0,0,.2);
       opacity: 1;
-      filter: saturate(1);
+      filter: saturate(1) brightness(1);
 
       &:hover {
         background-color: #FFF;
@@ -157,7 +157,7 @@
       background-color: #FFF;
       box-shadow: none;
       opacity: 1;
-      filter: saturate(1);
+      filter: saturate(1) brightness(1);
 
       &:hover {
         background-color: #FFF;
