--- a/_includes/components/selectors/expanded/tags.html
+++ b/_includes/components/selectors/expanded/tags.html
@@ -8,14 +8,14 @@
   </div>
   <div class="pmx-selector__item">
     <div class="pmx-selector__block ">
-      <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #0bda51;">܌</span>
+      <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #00bfff;">܌</span>
       <span class="pmx-selector__blockSeperator">•</span>
       <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Squad Y</span>
     </div>
   </div>
   <div class="pmx-selector__item pmx-selector__item--selected">
     <div class="pmx-selector__block ">
-      <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #0bda51;">܌</span>
+      <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #f4ca16;">܌</span>
       <span class="pmx-selector__blockSeperator">•</span>
       <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Squad Z</span>
     </div>
